fixed small issue with collapse menu

--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -14,12 +14,6 @@ body {
   padding: 0px;
 }
 
-.dropdown-menu li > a:hover,
-.dropdown-menu li > a:focus,
-.dropdown-submenu:hover > a {
-
-}
-
 .navbar-nav {
   padding-left: 15px;
   a {
@@ -29,4 +23,33 @@ body {
 
 .navbar {
   margin-bottom: 0px;
+}
+
+.divider-custom {
+  display:none;
+  *width: 100%;
+  height: 1px;
+  margin: 9px 1px;
+  *margin: -5px 0 5px;
+  overflow: hidden;
+  background-color: #e5e5e5;
+  border-bottom: 1px solid #e7e7e7;
+}
+
+@media (max-width: 768px) {
+  .navbar-nav {
+    padding-left: 0px;
+    li > a {
+      padding-left: 0px;
+    }
+    li { p {
+      text-align:center;
+    } }
+    li { p:before }
+  }
+  .divider-custom { display:block!important; }
+}
+
+@media (min-width: 768px) {
+
 }
